--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,431 +1,467 @@
 /*========================== VARIABLES CSS ======================*/
 :root {
-  --header-height: 3.5rem;
-  /*========== Colors ==========*/
-  --background-color: #000000;
-  --brown-color: #471d07;
-  --orange-color: #a2520d;
-  --yellow-color: #d9a849;
-  --text-color: #ffffff;
-  --gradient-top: linear-gradient(90deg, #d9a849 0%, #a2520d 100%);
-  --gradient-left: linear-gradient(
-    90deg,
-    rgba(162, 82, 13, 0.5) 0%,
-    rgba(0, 0, 0, 0.5) 100%
-  );
-  --gradient-right: linear-gradient(
-    90deg,
-    rgba(0, 0, 0, 0.5) 0%,
-    rgba(162, 82, 13, 0.5) 100%
-  );
-  --gradient-bottom: linear-gradient(
-    359.4deg,
-    rgba(162, 82, 13, 0.5) 0.52%,
-    rgba(0, 0, 0, 0.5) 99.48%
-  );
-  --button-gradient: linear-gradient(90deg, #d9a849 1.11%, #a2520d 98.89%);
-  --hypertext-underline-gradient: linear-gradient(
-    0deg,
-    #d9a849 0%,
-    #a2520d 100%
-  );
-  --background-gradient: radial-gradient(
-    131.8% 131.8% at 50% -31.8%,
-    #d9a849 23%,
-    #471d07 72.5%,
-    #000000 100%
-  );
-  --swiper-pagination-color: var(--yellow-color);
+    --header-height: 3.5rem;
+    /*========== Colors ==========*/
+    --background-color: #000000;
+    --brown-color: #471d07;
+    --orange-color: #a2520d;
+    --yellow-color: #d9a849;
+    --text-color: #ffffff;
+    --gradient-top: linear-gradient(90deg, #d9a849 0%, #a2520d 100%);
+    --gradient-left: linear-gradient(90deg,
+            rgba(162, 82, 13, 0.5) 0%,
+            rgba(0, 0, 0, 0.5) 100%);
+    --gradient-right: linear-gradient(90deg,
+            rgba(0, 0, 0, 0.5) 0%,
+            rgba(162, 82, 13, 0.5) 100%);
+    --gradient-bottom: linear-gradient(359.4deg,
+            rgba(162, 82, 13, 0.5) 0.52%,
+            rgba(0, 0, 0, 0.5) 99.48%);
+    --button-gradient: linear-gradient(90deg, rgba(217, 168, 73, 1) 0%, rgba(162, 82, 13, 1) 100%);
+    --hypertext-underline-gradient: linear-gradient(0deg,
+            #d9a849 0%,
+            #a2520d 100%);
+    --background-gradient: radial-gradient(131.8% 131.8% at 50% -31.8%,
+            #d9a849 23%,
+            #471d07 72.5%,
+            #000000 100%);
+    --swiper-pagination-color: var(--yellow-color);
 
-  /*========== Fonts & typography ==========*/
-  /*.5rem = 8px | 1rem = 16px ...*/
-  --title-font: "Dune Rise";
-  --h2-font: "Dune Rise";
-  --nav-text-font: "Champagne & Limousines";
-  --step--2: clamp(1.3021rem, 0.273rem + 4.5735cqi, 3rem);
-  --step--1: clamp(0.8681rem, 0.2922rem + 2.8793cqi, 2rem);
-  /* --h1-font-size: 1.5rem;
+    /*========== Fonts & typography ==========*/
+    /*.5rem = 8px | 1rem = 16px ...*/
+    --title-font: "Dune Rise";
+    --h2-font: "Dune Rise";
+    --nav-text-font: "Champagne & Limousines";
+    --step--2: clamp(1.3021rem, 0.273rem + 4.5735cqi, 3rem);
+    --step--1: clamp(0.8681rem, 0.2922rem + 2.8793cqi, 2rem);
+    /* --h1-font-size: 1.5rem;
     --h2-font-size: 1.5rem; */
-  /*========== Z Index ==========*/
-  --z-tooltip: 10;
-  --z-fixed: 100;
-  --z-background: -1;
+    /*========== Z Index ==========*/
+    --z-tooltip: 10;
+    --z-fixed: 100;
+    --z-background: -1;
 }
 
 /*========================== BASE ======================*/
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 html {
-  scroll-behavior: smooth;
-  color: var(--text-color);
+    scroll-behavior: smooth;
+    color: var(--text-color);
 }
 
 body {
-  background-color: var(--background-color);
+    background-color: var(--background-color);
 }
 
 @font-face {
-  font-family: "Champagne & Limousines";
-  src: url("../fonts/Champagne_&_Limousines.ttf") format("truetype");
-  font-family: "Dune Rise";
-  src: url("../fonts/Dune_Rise.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
+    font-family: "Champagne & Limousines";
+    src: url("../fonts/Champagne_&_Limousines.ttf") format("truetype");
+    font-family: "Dune Rise";
+    src: url("../fonts/Dune_Rise.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+a {
+    color: var(--text-color);
+    text-decoration: none;
 }
 
 h2 {
-  font-family: var(--h2-font);
-  font-size: 1.5rem;
-  padding-left: 1rem;
-  padding-bottom: 0.5rem;
+    font-family: var(--h2-font);
+    font-size: 1.5rem;
+    padding-left: 1rem;
+    padding-bottom: 0.5rem;
 }
 
 hr {
-  height: 2px;
-  background: var(--gradient-top);
-  border: none;
+    height: 2px;
+    background: var(--gradient-top);
+    border: none;
 }
 
 ul {
-  list-style: none;
-  font-family: var(--nav-text-font);
+    list-style: none;
+    font-family: var(--nav-text-font);
 }
 
 textarea {
-  resize: none;
+    resize: none;
 }
 
 /*========================== REUSABLE CSS CLASSES ======================*/
 
 .container {
-  max-width: 954px;
-  margin-inline: 0.7rem;
-  /* margin-inline: 15.188rem; */
+    max-width: 954px;
+    margin-inline: 0.7rem;
+    /* margin-inline: 15.188rem; */
 }
 
 .main {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .main__separator hr {
-  margin: 100px 0px;
-  max-width: 466px;
-  border-radius: 50%;
-  background: var(--yellow-color);
+    margin: 100px 20%;
+    max-width: 466px;
+    border-radius: 50%;
+    background: var(--yellow-color);
 }
 
 .main__buttons {
+    overflow: hidden;
+    position: relative;
     padding: 10px 50px;
     font-family: var(--nav-text-font);
-    color: var(--text-color);
     font-size: 20px;
-    text-decoration: none;
-    border-width: 3px;
-    border: 10px solid var(--yellow-color);
     background: none;
+    left: 50%;
+    transform: translateX(-50%);
+    border-image: var(--button-gradient);
+    border-image-slice: 1;
+    cursor: pointer;
+    transition: border-image 2s;
+
+    &:after {
+        background: var(--button-gradient);
+        content: "";
+        height: 155px;
+        left: -75px;
+        opacity: .4;
+        position: absolute;
+        top: -50px;
+        transform: rotate(35deg);
+        transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
+        width: 50px;
+        z-index: var(--z-fixed);
+    }
+}
+
+.main__buttons:hover {
+
+    &:after {
+        left: 120%;
+        transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
+    }
+}
+
+.main__buttons a {
+    transition: .5s;
+}
+
+.main__buttons:hover a {
+    color: var(--yellow-color);
 }
 
 /*========================== HEADER & NAV ======================*/
 .header {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  /* background-color: var(--brown-color); */
-  background: url(../img/header.svg) repeat-x;
-  /* background-position-y: -100px; */
-  /* border-color: transparent; */
-  z-index: var(--z-fixed);
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    /* background-color: var(--brown-color); */
+    background: url(../img/header.svg) repeat-x;
+    /* background-position-y: -100px; */
+    /* border-color: transparent; */
+    z-index: var(--z-fixed);
 }
 
 .nav {
-  position: relative;
-  height: var(--header-height);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    position: relative;
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav__logo,
 .nav__close,
 .nav__toggle,
 .nav__actions {
-  display: flex;
-  color: var(--text-color);
-  cursor: pointer;
+    display: flex;
+    color: var(--text-color);
+    cursor: pointer;
 }
 
 .nav__logo {
-  color: var(--text-color);
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  font-family: var(--title-font);
-  text-decoration: none;
-  transition: 0.5s;
+    color: var(--text-color);
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-family: var(--title-font);
+    text-decoration: none;
+    transition: 0.5s;
 }
 
 .nav__span {
-  color: var(--yellow-color);
+    color: var(--yellow-color);
 }
 
 .nav__logo:hover {
-  color: var(--yellow-color);
+    color: var(--yellow-color);
 }
 
 .nav__menu a {
-  color: var(--text-color);
-  text-decoration: none;
-  transition: 0.5s;
+    color: var(--text-color);
+    text-decoration: none;
+    transition: 0.5s;
 }
 
 .nav__menu a:hover {
-  color: var(--yellow-color);
+    color: var(--yellow-color);
+}
+
+.nav__actions {
+    font-size: 1.25rem;
+    column-gap: .5rem;
+    align-items: center;
 }
 
 /* Navigation for mobile devices */
 
 @media screen and (max-width: 992px) {
-  .nav__menu {
-    position: fixed;
-    top: 0;
-    right: -100%;
-    background-image: var(--gradient-right);
-    backdrop-filter: blur(16px);
-    -webkit-backdrop-filter: blur(16px);
-    width: 80%;
-    height: 100%;
-    padding: 6rem 3rem 0;
-    transition: right 0.4s;
-  }
+    .nav__menu {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        background-image: var(--gradient-right);
+        backdrop-filter: blur(16px);
+        -webkit-backdrop-filter: blur(16px);
+        width: 80%;
+        height: 100%;
+        padding: 6rem 3rem 0;
+        transition: right 0.4s;
+    }
 }
 
 .nav__list {
-  display: flex;
-  flex-direction: column;
-  row-gap: 3rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 3rem;
 }
 
 .nav__close {
-  position: absolute;
-  top: 1.15rem;
-  right: 1.5rem;
-  font-size: 1.25rem;
+    position: absolute;
+    top: 1.15rem;
+    right: 1.5rem;
+    font-size: 1.25rem;
 }
 
 /* Show menu */
 
 .show-menu {
-  right: 0;
+    right: 0;
 }
 
 /*========================== MAIN ======================*/
 
 .main__background {
-  position: absolute;
-  background-image: var(--background-gradient);
-  width: 100%;
-  height: 500px;
-  z-index: var(--z-background);
+    position: absolute;
+    background-image: var(--background-gradient);
+    width: 100%;
+    height: 500px;
+    z-index: var(--z-background);
 }
 
 .main__container {
-  margin-bottom: 2rem;
+    margin-bottom: 2rem;
 }
 
 .main__home {
-  position: relative;
-  text-align: center;
+    position: relative;
+    text-align: center;
 }
 
 .main__gif {
-  width: 100%;
+    width: 100%;
 }
 
 .main__title {
-  position: absolute;
-  font-family: var(--h2-font);
-  font-size: var(--step--2);
-  color: var(--text-color);
-  letter-spacing: var(--step--2);
-  width: 1440px;
-  left: calc(50% - 1440px / 2);
-  bottom: 46%;
-  text-shadow: -1px -1px 0 var(--brown-color), 0 -1px 0 var(--brown-color),
-    1px -1px 0 var(--brown-color), 1px 0 0 var(--brown-color),
-    1px 1px 0 var(--brown-color), 0 1px 0 var(--brown-color),
-    -1px 1px 0 var(--brown-color), -1px 0 0 var(--brown-color);
+    position: absolute;
+    font-family: var(--h2-font);
+    font-size: var(--step--2);
+    color: var(--text-color);
+    letter-spacing: var(--step--2);
+    width: 1440px;
+    left: calc(50% - 1440px / 2);
+    bottom: 46%;
+    text-shadow: -1px -1px 0 var(--brown-color), 0 -1px 0 var(--brown-color),
+        1px -1px 0 var(--brown-color), 1px 0 0 var(--brown-color),
+        1px 1px 0 var(--brown-color), 0 1px 0 var(--brown-color),
+        -1px 1px 0 var(--brown-color), -1px 0 0 var(--brown-color);
 }
 
 .title-background__main {
-  background-image: var(--gradient-bottom);
+    background-image: var(--gradient-bottom);
 }
 
 .main__description {
-  text-align: center;
-  font-family: var(--nav-text-font);
+    text-align: center;
+    font-family: var(--nav-text-font);
 }
 
 .main__span {
-  color: var(--yellow-color);
+    color: var(--yellow-color);
 }
 
 /* Carousel */
 
 .carousel__container {
-  padding-bottom: 50px;
+    padding-bottom: 50px;
 }
 
 .carousel-box {
-  position: relative;
-  min-width: 954px;
-  padding-top: 50px;
-  display: flex;
-  /* justify-content: center; */
-  align-items: center;
+    position: relative;
+    min-width: 954px;
+    padding-top: 50px;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
 }
 
 .carousel {
-  position: relative;
-  width: 100vw;
-  height: 550px;
-  perspective: 500px;
-  transform-style: preserve-3d;
-  transform-origin: 0% 50%;
+    position: relative;
+    width: 100vw;
+    height: 550px;
+    perspective: 500px;
+    transform-style: preserve-3d;
+    transform-origin: 0% 50%;
 }
 
 .carousel.carousel-slider {
-  top: 0;
-  left: 0;
+    top: 0;
+    left: 0;
 }
 
 .carousel.carousel-slider .carousel-fixed-item {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 20px;
-  z-index: 1;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    z-index: 1;
 }
 
 .carousel.carousel-slider .carousel-fixed-item.with-indicators {
-  bottom: 68px;
+    bottom: 68px;
 }
 
 .carousel.carousel-slider .carousel-item {
-  width: 100%;
-  height: 100%;
-  min-height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .carousel.carousel-slider .carousel-item h2 {
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 32px;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 32px;
 }
 
 .carousel.carousel-slider .carousel-item p {
-  font-size: 15px;
+    font-size: 15px;
 }
 
 .carousel .carousel-item {
-  visibility: hidden;
-  width: 250px;
-  cursor: pointer;
-  position: absolute;
-  top: 0;
-  left: 0;
+    visibility: hidden;
+    width: 250px;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
-.carousel .carousel-item > img {
-  width: 100%;
+.carousel .carousel-item>img {
+    width: 100%;
 }
 
 .carousel .indicators {
-  padding-left: 0;
-  list-style-type: none;
-  position: absolute;
-  text-align: center;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: 0;
+    padding-left: 0;
+    list-style-type: none;
+    position: absolute;
+    text-align: center;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0;
 }
 
 .carousel .indicators .indicator-item {
-  display: inline-block;
-  position: relative;
-  cursor: pointer;
-  height: 8px;
-  width: 8px;
-  margin: 24px 4px;
-  background-color: var(--text-color);
-  transition: background-color 0.3s;
-  border-radius: 50%;
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    height: 8px;
+    width: 8px;
+    margin: 24px 4px;
+    background-color: var(--text-color);
+    transition: background-color 0.3s;
+    border-radius: 50%;
 }
 
 .carousel .indicators .indicator-item.active {
-  background-color: var(--yellow-color);
+    background-color: var(--yellow-color);
 }
 
 .carousel.scrolling .carousel-item .materialboxed,
 .carousel .carousel-item:not(.active) .materialboxed {
-  pointer-events: none;
+    pointer-events: none;
 }
 
 .carousel .carousel-item img {
-  max-width: 235px;
-  max-height: 319px;
-  border-radius: 10px;
-  transform: translateX(8px) translateY(-100px);
-  object-fit: cover;
-  object-position: center;
+    max-width: 235px;
+    max-height: 319px;
+    border-radius: 10px;
+    transform: translateX(8px) translateY(-100px);
+    object-fit: cover;
+    object-position: center;
 }
 
 .carousel__background {
-  position: absolute;
-  z-index: var(--z-background);
-  bottom: 0%;
+    position: absolute;
+    z-index: var(--z-background);
+    bottom: 0%;
 }
 
 /* Actors */
 
 .actors__container {
-  padding-bottom: 100px;
+    padding-bottom: 100px;
 }
 
 .actors__content {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 10px 20px;
-  padding-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px 20px;
+    padding-top: 10px;
 }
 
 .actor__card {
-  position: relative;
-  text-align: center;
+    position: relative;
+    text-align: center;
 }
 
 .actor__card img {
-  width: 39vw;
+    width: 39vw;
+    /* width: clamp(350px, 75%, 800px); */
 }
 
 .actor__figcaption {
-  position: absolute;
-  width: 100%;
-  padding: 10px 0px;
-  bottom: 0;
-  font-family: var(--nav-text-font);
-  font-size: var(--step--1);
-  background-color: var(--brown-color);
+    position: absolute;
+    width: 100%;
+    padding: 10px 0px;
+    bottom: 0;
+    font-family: var(--nav-text-font);
+    font-size: var(--step--1);
+    background-color: var(--brown-color);
 }
 
 .actors__background {
@@ -433,29 +469,30 @@ textarea {
 }
 
 /* For small devices*/
-@media screen and (min-width: 576px) {
-}
+@media screen and (min-width: 576px) {}
 
 /* For medium devices*/
-@media screen and (min-width: 768px) {
-}
+@media screen and (min-width: 768px) {}
 
 /* For large devices*/
 @media screen and (min-width: 992px) {
-  .nav__list {
-    display: flex;
-    flex-direction: row;
-    gap: 5rem;
-    align-items: center;
-    justify-content: center;
-    justify-items: center;
-  }
+    .nav__list {
+        display: flex;
+        flex-direction: row;
+        gap: 5rem;
+        align-items: center;
+        justify-content: center;
+        justify-items: center;
+    }
+
+    .nav__toggle,
+    .nav__close {
+        display: none;
+    }
 }
 
 /* For extra large devices */
-@media screen and (min-width: 1200px) {
-}
+@media screen and (min-width: 1200px) {}
 
 /* For extra extra large devices */
-@media screen and (min-width: 1400px) {
-}
+@media screen and (min-width: 1400px) {}
